# WGA_Texture_Editor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.hpp  common.hpp  core.hpp  render_kernel.cl  render_objects.hpp  renderer.cpp  renderer.hpp  settings_parser.cpp  settings_parser.hpp  texture_manager.cpp  texture_manager.hpp  textures.hpp  utils.hpp  win_platform.cpp
